# CPAI_study

./: .gitignore  README.md  pyproject.toml
RLbasic/: bandit_lecture1.ipynb  bandit_lecture1_for_student.ipynb  plan.md
rlutils/: __init__.py  envs.py  methods.py  plotting.py  policies.py  utils.py
