[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlutils"
version = "0.1.0"
description = "Lightweight RL teaching utilities for the CPAI study group"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.5",
    "scipy>=1.8",
]

[project.optional-dependencies]
notebook = [
    "ipywidgets>=7.0",
]

[tool.setuptools.packages.find]
include = ["rlutils*"]
